# ChatClient_QML_migrate

./: CMakeLists.txt  Main.qml  Makefile
qml/: MainWidget.qml  Registration.qml  StartWidget.qml
qml/MainWidgetInternal/LeftSideBar/: LeftToolPanel.qml
qml/MainWidgetInternal/MidSideBar/: MidPanel.qml
qml/MainWidgetInternal/MidSideBar/SearchPanel/: SearchPanel.qml
qml/MainWidgetInternal/MidSideBar/StackPanels/: ContactsPanel.qml  DelegateContactPanel.qml  DelegateSearchPanel.qml  DelegateSearchResultPanel.qml  RearchResultPanel.qml  SearchResultPanel.qml
qml/MainWidgetInternal/RightSideBar/: ChatHistory.qml
qml/MainWidgetInternal/RightSideBar/ChatHistoryInternal/: BottomToolPanel.qml  ChatDisplayPanel.qml  FileDialogHandler.qml  TopToolPanel.qml
qml/StyleModule/: CMakeLists.txt  Style.qml
src/: main.cpp
src/core/: chatclient.cpp  chatclient.h
src/model/: chathistorymodel.cpp  chathistorymodel.h  contactsmodel.cpp  contactsmodel.h  searchmodel.cpp  searchmodel.h
src/model/data/: dialog.cpp  dialog.h  dialogsmanager.cpp  dialogsmanager.h
src/network/: httpclient.cpp  httpclient.h  websocketclient.cpp  websocketclient.h
src/utils/: utils.cpp  utils.h
